PP-MS-Entitlements/PP-MS-Entitlements-DevOps/k8s/k8s-pp-ms-entitlements-web-loadbal-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: pp-ms-entitlements-web-loadbalancer-dev
  labels:
    app: pp-ms-entitlements-web
    department: entitlements
spec:
  type: LoadBalancer
  selector:
    app: pp-ms-entitlements-web
    department: entitlements
  ports:
  - protocol: TCP
    port: 6101
    targetPort: 6100
  clusterIP: 10.96.0.61
status:
  loadBalancer:
    ingress:
      - ip: 192.0.2.161
