PP-MS-Entitlements/PP-MS-Entitlements-DevOps/k8s/k8s-pp-ms-entitlements-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pp-ms-entitlements-web
spec:
  defaultBackend:
      service:
        name: pp-ms-entitlements-web
        port: 
          number: 6100
